my secend commit

--- a/NomalisApiGateway/.env.example
+++ b/NomalisApiGateway/.env.example
@@ -17,3 +17,9 @@ DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+
+ACTORS_SERVICE_BASE_URL=http://localhost:8066/api
+ACTORS_SERVICE_SECRET=Actors
+FILMS_SERVICE_BASE_URL=http://localhost:8067/api
+FILMS_SERVICE_SECRET=Films
